--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 	<body>
 
 		<!-- Replace this URL with your channel to connect the API! -->
-		<a href="https://www.are.na/michael-fehrenbach/typography-and-interaction-too" id="channel-url">
-			<h1 id="channel-title"></h1> <!-- The channel title will be inserted inside this h1. -->
-		</a>
-		<div id="channel-description"></div> <!-- Same here for the channel description. -->
-
+		<header>
+			<a href="https://www.are.na/dong-xia/project-ii-archive" id="channel-url">
+				<h1 id="channel-title">hellooo</h1> <!-- The channel title will be inserted inside this h1. -->
+			</a>
+			<div id="channel-description"></div> <!-- Same here for the channel description. -->
+		</header>
 
 
 		<!-- All the channel “blocks” will be created as children, here. -->
 		<!-- You could move the classes to different section elements to separate the types! -->
 		<section class="audio-embed-blocks audio-file-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
-			<h2>Blocks</h2>
+			<!-- <h2>Blocks</h2> -->
 		</section>
 
 
