--- a/index-.html
+++ b/index-.html
@@ -12,36 +12,16 @@
 
 		<!-- Replace this URL with your channel to connect the API! -->
 		<header>
-			<a href="https://www.are.na/yining-zhu-_5ltvwbtgr8/1-image" id="channel-url">
+			<a href="https://www.are.na/dong-xia/project-ii-archive" id="channel-url">
 				<h1 id="channel-title">hellooo</h1> <!-- The channel title will be inserted inside this h1. -->
 			</a>
 			<div id="channel-description"></div> <!-- Same here for the channel description. -->
 		</header>
 
 
-
-
-
-		<h1>
-		 <ul>
-		      <div id="menu-outer">
-		        <div class="table">
-		          <ul id="horizontal-list">
-		         <li><a  style="color:White;" href="index.html">All</a ></li>
-		             <li><a style="color:pink;" href="image.html">Image</a ></li>
-		             <li><a style="color:lightgreen;" href="green.html">Green</a ></li>
-		        <li><a style="color:lightblue;" href="blue.html">Blue</a ></li>
-		             </ul>
-		        </div>
-		      </div>
-		         </h1>
-
-
-
-
 		<!-- All the channel “blocks” will be created as children, here. -->
 		<!-- You could move the classes to different section elements to separate the types! -->
-		<section class=" image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
+		<section class="audio-embed-blocks audio-file-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
 			<!-- <h2>Blocks</h2> -->
 		</section>
 
