--- a/1-1.html
+++ b/1-1.html
@@ -12,31 +12,49 @@
 
 		<!-- Replace this URL with your channel to connect the API! -->
 		<header>
-			<a href="https://www.are.na/yining-zhu-_5ltvwbtgr8/1-image" id="channel-url">
+			<a href="https://www.are.na/yining-zhu-_5ltvwbtgr8/1-1_frank-ocean" id="channel-url">
 				<h1 id="channel-title">hellooo</h1> <!-- The channel title will be inserted inside this h1. -->
 			</a>
 			<div id="channel-description"></div> <!-- Same here for the channel description. -->
 		</header>
 
 
+		<!-- <section>
+			<details class="rounded-container">
+				<summary>1.1_FRANK OCEAN</summary>
+				<p class="faded">Imagined spaces wearable technology profound intuition critical theory uncanny alternate realities simulacrum Realism tension. Visual narrative paradoxical imbue alternative history thesis Stuckism hybridity transitory. Subject-object dichotomy fragmentation of self neuroaesthetics mnemonic fractal disseminate emergent cultural memory Jean-François Lyotard. Spectral oscillate Kant interpretative systems of representation subjectivism performativity. Fluidity ritualized behaviour informance Other cultural symbolism body politic communities of reception in-itself.</p>
+			</details>
+		</section> -->
+
+		<!-- <summary>
+		<template id="image-block">
+			<figure class="image-block">
+				<h3 class="title"></h3>
+				<img class="image">
+				<a class="link">
+					<p class="link-title"></p>
+				</a>
+				<figcaption class="description"></figcaption>
+				<p class="type"></p>
+			</figure>
+		</template>
+	</summary> -->
 
 
-
-		<h1>
+		<!-- <h1>
 		 <ul>
 		      <div id="menu-outer">
 		        <div class="table">
 		          <ul id="horizontal-list">
-		         <li><a  style="color:White;" href="index.html">All</a ></li>
-		             <li><a style="color:pink;" href="image.html">Image</a ></li>
-		             <li><a style="color:lightgreen;" href="green.html">Green</a ></li>
-		        <li><a style="color:lightblue;" href="blue.html">Blue</a ></li>
-		             </ul>
+								<li><a style="color:Green;" >1_IMAGE</a ></li>
+								<li><a style="color:pink;" href="1_1.html">1.1_BABY-TRAVIS.PNG</a ></li>
+
+		           </ul>
 		        </div>
 		      </div>
-		         </h1>
+		 </h1>
 
-
+ -->
 
 
 		<!-- All the channel “blocks” will be created as children, here. -->
@@ -77,17 +95,7 @@
 			</figure>
 		</template>
 
-		<template id="image-block">
-			<figure class="image-block">
-				<h3 class="title"></h3>
-				<img class="image">
-				<a class="link">
-					<p class="link-title"></p>
-				</a>
-				<figcaption class="description"></figcaption>
-				<p class="type"></p>
-			</figure>
-		</template>
+
 
 		<template id="link-block">
 			<figure class="link-block">
@@ -121,6 +129,21 @@
 				<p class="type"></p>
 			</figure>
 		</template>
+
+		<template id="image-block">
+			<figure class="image-block">
+				<details class="rounded-container">
+				<summary>				<h3 class="title"></h3>  </summary>
+				<img class="image">
+				<a class="link">
+					<p class="link-title"></p>
+				</a>
+				<figcaption class="description"></figcaption>
+				<p class="type"></p>
+				</details>
+			</figure>
+		</template>
+
 
 		<!-- YouTube, Vimeo, etc. -->
 		<template id="video-embed-block">
