--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="assets/style.css" rel="stylesheet">
 		<script src="assets/arena.js"></script>
 		<link href="assets/favicon.png" rel="icon">
+		<link rel="stylesheet" href="https://use.typekit.net/ooj3dtq.css">
 	</head>
 	<body>
 
