--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
 		<link href="assets/reset.css" rel="stylesheet">
 		<link href="assets/style.css" rel="stylesheet">
 		<script src="assets/arena.js"></script>
-		<link rel="shortcut icon" type="image/png" href="img/favicon.png">
-		<link href="assets/favicon.png" rel="icon">
 		<link rel="stylesheet" href="https://use.typekit.net/ooj3dtq.css">
 	</head>
 	<body>
@@ -69,6 +69,7 @@
 			<figure class="link-block">
 				<details class="rounded-container">
 				<summary>	<h3 class="title"></h3></summary>
+				<a class="link">
 				<img class="image">
 				<a class="link">
 				</a>
@@ -136,12 +137,12 @@
 
 
 
-
-
-
-
-
-
+		<header>
+			<a href="https://www.are.na/dong-xia/project-ii-archive" id="channel-url">
+				<h1 id="channel-title"> Dong & YINING </h1> <!-- The channel title will be inserted inside this h1. -->
+			</a>
+			<H1 id="channel-description"></P> <!-- Same here for the channel description. -->
+		</header>
 
 
 
